Revert "Fix misaligned inline icons"
This reverts commit 691e3b3698ddc944f03a7bab7cccb4c69b0960b4.

--- a/shared/src/global-styles/icons.scss
+++ b/shared/src/global-styles/icons.scss
@@ -8,7 +8,9 @@
 // Formats an icon so that it appears inline in the text
 // with height matching the text
 .icon-inline {
-    vertical-align: top;
+    // SVGs already include padding to account for text baseline,
+    // so align with the bottom of the text
+    vertical-align: bottom;
     display: inline-flex;
     align-items: center;
 }
